# uplift-cli

./: .gitignore  Cargo.toml  Makefile  Readme.md  justfile
.github/workflows/: ci.yml  release.yml
corebluetooth-sys/: Cargo.toml  build.rs
corebluetooth-sys/src/: lib.rs
crates/uplift_lib/: Cargo.toml
crates/uplift_lib/src/: desk.rs  discovery.rs  error.rs  id.rs  lib.rs
src/: desk.rs  group.rs  main.rs
src/bluetooth/: central_manager.rs  characteristic.rs  delegate.rs  mod.rs  peripheral.rs  service.rs  utils.rs  uuid.rs
