[package]
name = "uplift-cli"
version = "0.2.0"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = "A cli tool to control a bluetooth enabled uplift desk"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/uplift-cli"
repository = "https://github.com/dylanowen/uplift-cli"
edition = "2021"

[[bin]]
name = "uplift"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"

# async
tokio = { version = "1.25", features = ["macros", "time", "rt-multi-thread"] }
futures = "0.3"

# Bluetooth support
btleplug = "0.10"
uuid = "1.2"

# Command line parsing
clap = { version =  "3.2", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
