[package]
name = "uplift-lib"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = ""
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/uplift-cli"
repository = "https://github.com/dylanowen/uplift-cli"
edition = "2021"

[lib]

[features]
serde = ["dep:serde", "btleplug/serde"]
sqlx = ["dep:sqlx", "dep:rmp-serde", "serde"]

[dependencies]
log = "0.4.21"

# async
tokio = { version = "1.37", features = ["macros", "sync", "time"] }
futures = "0.3.30"

# Bluetooth support
btleplug = "0.11.5"
uuid = "1.8"


serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
sqlx = { version = "0.8", default-features = false, optional = true }
rmp-serde = { version = "1.3", optional = true }

# Error handling
anyhow = "1.0.82"
thiserror = "2.0"
